Change document Color

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><meta charset="utf-8">
 	<title>Technical Documentation</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<nav id="navbar">
 		<header>JS Documentation</header>
-		<a href="#Introduction" class="nav-link">Introduction</a>
+		<a href="#Introduction" class="nav-link">Background</a>
 		<a href="#What_you_should_already_know" class="nav-link">What you should already know</a>
 		<a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
 		<a href="#Hello_world" class="nav-link">Hello world</a>
@@ -27,7 +27,7 @@
 			<header>Background</header>
 			<p>JavaScript is an object-oriented scripting language that is cross-platform.</p>
 			<ul>
-				<span>JavaScript has a standard library of objects such as Array, Date, and Math, among others.</span>
+				<!-- <span>JavaScript has a standard library of objects such as Array, Date, and Math, among others.</span> -->
 				<li>Client-side JavaScript supplements the core language by providing objects for controlling a browser and its Document Object Model (DOM). </li>
 				<li>Server-side JavaScript extends the basic language by offering objects required for server-side JavaScript execution.</li>
 			</ul>
@@ -35,7 +35,7 @@
 		<section class="main-section" id="What_you_should_already_know">
 			<header>What you should already be aware of</header>
 			<ul>
-				<span>This guide assumes you have the following fundamental knowledge:</span>
+				<!-- <span>This guide assumes you have the following fundamental knowledge:</span> -->
 				<li>A comprehension of the Internet and the World Wide Web (WWW) in general.</li>
 				<li>Working understanding of HyperText Markup Language (HTML) is required.</li>
 				<li>Some programming expertise is required.</li>
@@ -154,7 +154,7 @@
 			<ul>
 				<li>
 					<ul>
-						<span>Six data types that are primitives:</span>
+						<!-- <span>Six data types that are primitives:</span> -->
 						<li>Boolean. true and false.</li>
 						<li>null. A special keyword denoting a null value. Because JavaScript is case-sensitive, null is not the same as Null, NULL, or any other variant.</li>
 						<li>undefined. A top-level property whose value is undefined.</li>
@@ -264,17 +264,17 @@
   }
 			</code>
 			<ul>
-				<span>With each iteration, the loop increments n and adds that value to x. Therefore, x and n take on the following values:</span>
+				<!-- <span>With each iteration, the loop increments n and adds that value to x. Therefore, x and n take on the following values:</span> -->
 				<li>After the first pass: n = 1 and x = 1</li>
 				<li>After the second pass: n = 2 and x = 3</li>
 				<li>After the third pass: n = 3 and x = 6</li>
-				<span>After completing the third pass, the condition n < 3 is no longer true, so the loop terminates.</span>
+				<!-- <span>After completing the third pass, the condition n < 3 is no longer true, so the loop terminates.</span> -->
 			</ul>
 		</section>
 		<section class="main-section" id="Function_declarations">
 			<header>Function declarations</header>
 			<ul>
-				<span>A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by:</span>
+				<!-- <span>A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by:</span> -->
 				<li>The name of the function.</li>
 				<li>A list of arguments to the function, enclosed in parentheses and separated by commas.</li>
 				<li>The JavaScript statements that define the function, enclosed in curly brackets, { }.</li>
